--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -2,35 +2,31 @@ name: CI/CD Pipeline
 
 on:
   push:
-    branches:
-      - main
-      - dev
+    branches: [ "main", "dev" ]
 
 jobs:
   build:
     runs-on: ubuntu-latest
-
     steps:
-      # Check out the code from GitHub
       - name: Checkout Repository
         uses: actions/checkout@v3
 
-      # Set up Python
       - name: Set Up Python
         uses: actions/setup-python@v3
         with:
-          python-version: '3.10'  # Change to your desired Python version
+          python-version: "3.10"  # or your preferred version
 
-      # Install dependencies from requirements.txt
       - name: Install Dependencies
         run: |
           python -m pip install --upgrade pip
           pip install -r requirements.txt
 
-      # Run database migrations (make sure your settings are configured for a test database)
-      - name: Run Migrations
-        #run: python manage.py migrate
 
-      # Run tests using Django's test framework
-      - name: Run Tests
-        #run: python manage.py test
+      - name: Run Migrations
+        run: |
+          python manage.py migrate --check
+
+
+     # - name: Run Tests
+        #run: |
+          #python manage.py test
