--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -14,19 +14,17 @@ jobs:
       - name: Set Up Python
         uses: actions/setup-python@v3
         with:
-          python-version: "3.10"  # or your preferred version
+          python-version: "3.10"  
 
       - name: Install Dependencies
         run: |
           python -m pip install --upgrade pip
           pip install -r requirements.txt
 
-
       - name: Run Migrations
         run: |
           python manage.py migrate --check
 
-
-     # - name: Run Tests
-        #run: |
-          #python manage.py test
+      # - name: Run Tests
+      #   run: |
+      #     python manage.py test
