--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -7,6 +7,7 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
+
     steps:
       - name: Checkout Repository
         uses: actions/checkout@v3
@@ -14,17 +15,28 @@ jobs:
       - name: Set Up Python
         uses: actions/setup-python@v3
         with:
-          python-version: "3.10"  
+          python-version: "3.10"
 
       - name: Install Dependencies
         run: |
           python -m pip install --upgrade pip
           pip install -r requirements.txt
 
-      - name: Run Migrations
+      - name: Set Environment Variables
+        env:
+          DB_NAME: ${{ secrets.DB_NAME }}
+          DB_USER: ${{ secrets.DB_USER }}
+          DB_PASSWORD: ${{ secrets.DB_PASSWORD }}
+          DB_HOST: ${{ secrets.DB_HOST }}
+          DB_PORT: ${{ secrets.DB_PORT }}
+          SSL_ROOT_CERT_B64: ${{ secrets.SSL_ROOT_CERT_B64 }}
         run: |
-          python manage.py migrate --check
+          echo "$SSL_ROOT_CERT_B64" | base64 -d > root.crt
+          export SSL_ROOT_CERT="$PWD/root.crt"
+          echo "Database environment variables set."
 
-      # - name: Run Tests
-      #   run: |
-      #     python manage.py test
+      - name: Run Migrations
+        run: python manage.py migrate --check
+
+      #- name: Run Tests
+       # run: python manage.py test
